prod/apps/media/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: media
  labels:
    pod-security.kubernetes.io/enforce: privileged
  annotations:
    downscaler/uptime: "Mon-Sun 07:00-22:00 Europe/Berlin"
